force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__DisableAllCards__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisableAllCards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable &quot;All cards&quot;</label>
    <type>Checkbox</type>
</CustomField>