force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__DisplayAllDeleteCards__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisplayAllDeleteCards__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display&quot;AllDeleteCards&quot;</label>
    <type>Checkbox</type>
</CustomField>