force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__Enable_Contact__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Enable_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable &quot;Move to Contact&quot;</label>
    <type>Checkbox</type>
</CustomField>