force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__Enable_EditFields__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Enable_EditFields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable &quot;Edit fields&quot;</label>
    <type>Checkbox</type>
</CustomField>